--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,11 +6,18 @@
     "module": "ESNext",
     "resolveJsonModule": true,
     "baseUrl": ".",
-"paths": {
-      "@/*":  ["./src/*"],
-      "@backend":  ["./wailsjs/go/main/App.js"],
-      "@runtime": ["./wailsjs/runtime/runtime.js"]
+    "paths": {
+      "@/*": [
+        "./src/*"
+      ],
+      "@backend": [
+        "./wailsjs/go/main/App.js"
+      ],
+      "@runtime": [
+        "./wailsjs/runtime/runtime.js"
+      ]
     },
+    "typeRoots": ["./src/types"],
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
