--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "vite": "^5.4.0"
   },
   "dependencies": {
+    "@fontsource/material-symbols-outlined": "^5.1.0",
     "@material/web": "^2.1.0"
   }
 }
